# hackathon

./: .dockerignore  .env.example  AGENTS.md  AZURE_CLI_REFERENCE.md  AZURE_DEPLOYMENT.md  AZURE_SETUP_COMPLETE.md  CMD_SYNTAX_UPDATE.md  CMD_UPDATE_COMPLETE.md  DESIGN.md  DOCKER.md  DOCKER_SETUP.md  DOCKER_UV_UPDATE.md  Dockerfile  FINAL_STATUS.md  README.md  REORGANIZATION_SUMMARY.md  UV_MIGRATION.md  UV_SETUP_COMPLETE.md  app.py  azure-acr-build.bat  azure-acr-build.sh  azure-quick-deploy.bat  azure-quick-deploy.sh  docker-build.bat  docker-build.sh  docker-compose.dev.yml  docker-compose.yml  presentation.md  pyproject.toml  requirements.txt  shift_handover.db  start.bat  verify_docker_setup.py  verify_setup.py
database/: db_manager.py  schema.sql
docs/: COMPLETE_STATUS.md  PROJECT_SUMMARY.md  README.md  REORGANIZATION_COMPLETE.md  STRUCTURE.md  UV_MIGRATION.md  UV_SETUP_COMPLETE.md  directory_tree.txt
infra/: README.md  main.bicep
pages/: dashboard.py  issues_alerts.py  market.py
pages_test/: __init__.py  comments.py  handover_log.py  operations.py  positions.py
scripts/: start.bat  verify_setup.py
src/backend/database/: __init__.py
src/frontend/pages/: comments.py  dashboard.py  handover_log.py  issues_alerts.py  market.py  operations.py  positions.py
src/tests/: test_db_manager.py  test_helpers.py
src/utils/: helpers.py
tests/: __init__.py  test_db_manager.py  test_helpers.py
utils/: __init__.py
