[project]
name = "shift-handover"
version = "1.0.0"
description = "Power & Gas Trader Shift Handover System"
requires-python = ">=3.9"
dependencies = [
    "streamlit==1.50.0",
    "pandas==2.1.0",
    "numpy>=1.23.0,<2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.0",
    "pytest-cov==4.1.0",
]
